src/yini_test/cases/golden/strict/valid/strings/r-prefix-explicit-raw.strict.yini
@yini strict

^ Strings
key = R"value"

/END
