src/yini_test/cases/golden/strict/invalid/strings/classic-string-invalid-octal.strict.yini
@yini strict

^ Strings
key = C"\o378"

/END
